syntax = "proto3";

option go_package = "/pb";


// Server
service ChatService {
  rpc Chat(stream ClientRequest) returns (stream ServerReply);
}

// ----------- Client → Server messages -----------
message ClientRequest {
  oneof payload {
    JoinRequest join = 1;
    LeaveRequest leave = 2;
    SendMessage message = 3;
  }
}

message JoinRequest {
  int32 client_id = 1;
  VectorClock vec_clock = 2;
}

message LeaveRequest {
  int32 client_id = 1;
  VectorClock vec_clock = 2;
}

message SendMessage {
  int32 client_id = 1;
  VectorClock vec_clock = 2;
  string message = 3;
}

// ----------- Server → Client messages -----------
message ServerReply {
  string ack = 1;
  VectorClock vec_clock = 2;
}

// ----------- Shared types -----------
message VectorClock {
  repeated int32 clock = 1;
}